src/test/ui/transmutability/malformed-program-gracefulness/feature-missing.stderr
error[E0658]: use of unstable library feature 'transmutability'
  --> $DIR/feature-missing.rs:5:5
   |
LL | use std::mem::BikeshedIntrinsicFrom;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(transmutability)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
